@@ -2,7 +2,8 @@ Revision history for Perl extension Statistics::R.
 
 0.x
     - Better handling of error messages generated by R (reported by Mike Imelfort)
-    - Tests more robust to different locales (reported by Knut Behrends) 
+    - Tests more robust to different locales (reported by Knut Behrends)
+    - Tests for heredocs and for loops
 
 0.21  2011-09-04
     - Tweaked the regular expressions that parse the R output stream for added
